--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinod Netflix Clone</title>
+    <title>VISHNU Netflix Clone</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -42,7 +42,7 @@
       </div>
       <div class="netflixOriginals">
         <div class="original__header">
-          <h2>VINOD NETFLIX ORIGINALS</h2>
+          <h2>Vishnu NETFLIX ORIGINALS</h2>
         </div>
         <div class="original__movies">
           <!-- Movies List -->
