--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWJ Netflix Clone</title>
+    <title>Vishnu Netflix Clone</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="login.css">
@@ -25,7 +25,7 @@
     <main>
         <div class="loginContainer">
             <div class="logingContainer-main">
-                <div><h1>Sign In TO RAHAM NETFLIX</h1></div>
+                <div><h1>Sign In TO VISHNU NETFLIX</h1></div>
                 <div class="registered-alert alert alert-success" role="alert">
                     Successfully Registered
                 </div>
